# mcp-server-ccxt

./: .env.example  .gitignore  README.md  jest.config.js  package-lock.json  package.json
crypto-orderflow-mcp/: .env.example  .gitignore  README.md  crypto-orderflow-mcp.service  pyproject.toml  requirements.txt  run.py
crypto-orderflow-mcp/docker/: Dockerfile  docker-compose.yml
crypto-orderflow-mcp/docs/: README.md  api.md  cherry-studio-setup.md  cherry_studio_setup.md  indicators.md  troubleshooting.md
crypto-orderflow-mcp/src/: __init__.py  config.py  main.py
crypto-orderflow-mcp/src/binance/: __init__.py  rest_client.py  types.py  ws_client.py
crypto-orderflow-mcp/src/data/: __init__.py  cache.py  orderbook.py  storage.py
crypto-orderflow-mcp/src/indicators/: __init__.py  delta.py  delta_cvd.py  depth_delta.py  footprint.py  imbalance.py  session_levels.py  volume_profile.py  vwap.py
crypto-orderflow-mcp/src/mcp/: __init__.py  server.py  tools.py
crypto-orderflow-mcp/src/server/: __init__.py  mcp_server.py
crypto-orderflow-mcp/src/storage/: __init__.py  cache.py  sqlite_store.py
crypto-orderflow-mcp/src/tools/: __init__.py  depth_delta.py  footprint.py  key_levels.py  liquidations.py  market_snapshot.py  orderflow_metrics.py
crypto-orderflow-mcp/src/utils/: __init__.py  helpers.py  logging.py  rate_limiter.py  time_utils.py
crypto-orderflow-mcp/systemd/: crypto-mcp.service
crypto-orderflow-mcp/tests/: __init__.py  conftest.py  test_footprint.py  test_orderbook.py  test_session_levels.py  test_volume_profile.py  test_vwap.py
src/: index.ts
src/exchange/: manager.ts
src/tools/: binance-futures.ts  config.ts  index.ts  public.ts
src/utils/: futures-helpers.ts  rate-limiter.ts  trade-stats.ts
tests/: bracket-orders.test.ts  futures-helpers.test.ts  trade-stats.test.ts
